Add PluginComponentRegistry for dependency-ordered plugin service sharing
Plugins are initialized in dependency order (topologically sorted by
extendedPlugins). This commit introduces PluginComponentRegistry — a
typed lookup that accumulates components as each plugin is initialized,
so later plugins can discover services from their dependencies at
createComponents() time without deferred resolution.

Changes:
- Add PluginComponentRegistry interface and DefaultPluginComponentRegistry
- Add new Plugin.createComponents() overload accepting the registry;
  default delegates to the old signature for full BWC
- Node.java: replace flatMap with iterative loop that feeds the registry
- FlightStreamPlugin: remove ArrowAllocatorServiceHolder/Bridge, obtain
  ArrowAllocatorService directly from registry
- AnalyticsPlugin: same simplification
- AnalyticsSearchService: accept ArrowAllocatorService directly, create
  child allocator eagerly at construction
- Add DefaultPluginComponentRegistryTests

Signed-off-by: bowenlan-amzn <bowenlan23@gmail.com>